@startuml
skinparam classAttributeIconSize 0

class AuthFacade {
+ changeUserEmail(oldEmail, newEmail)
+ changeUserPassword(email, pwd)
}
class Client {
- name
- cardNumber
- nhsId
- dateBirth
- TIN
- phoneNumber
- email
- sex
+ updateData(dto)
}
class UpdateClientDataUI
class UpdateClientDataController
class Company {
- designation
}
class ClientStore {
+ getClientByEmail(email)
+ updateClientData(client, dto)
- validateData(dto)
}
class ClientMapper {
+ toDTO(client)
}
class ClientDTO {
- name
- cardNumber
- nhsId
- dateBirth
- TIN
- phoneNumber
- email
- sex
}

UpdateClientDataUI ..> UpdateClientDataController
UpdateClientDataUI ..> ClientDTO
UpdateClientDataController ..> ClientMapper
UpdateClientDataController ..> AuthFacade
ClientMapper .right.> ClientDTO
UpdateClientDataController ..> Company
Company --> ClientStore : uses
ClientStore --> Client : contains
@enduml